Fixed the spacing of the phone image. change the image tag to video tag.

--- a/resources/style.css
+++ b/resources/style.css
@@ -6,8 +6,8 @@
 }
 
 h1{
-    color:white;
     font-size: 50px;
+    font-weight: normal;
 }
 .links{
     color:aquamarine;
